# MYTA

./: .env.example  .env.production.example  .env.production.template  .env.template  .gitattributes  .gitignore  AUDIENCE_INSIGHTS_AGENT.md  BOSS_AGENT_SYSTEM.md  CI-CD.md  CLAUDE.md  CONTENT_ANALYSIS_AGENT.md  DOCKER.md  ENVIRONMENT_SETUP.md  HIGH_PRIORITY_IMPLEMENTATION_GUIDE.md  MODEL_SWITCHING_GUIDE.md  MYTA-Video-Script.txt  MYTA_Demo_Script.md  OAUTH_IMPLEMENTATION.md  OAUTH_READY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PYTHON_ERRORS_GUIDE.md  PYTHON_FIXES_SUMMARY.md  RAILWAY_ENV_VARIABLES.md  README.md  REDIS_SESSION_MANAGEMENT.md  REMAINING_PYTHON_ISSUES.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_REPORT.md  SECURITY_CHECKLIST.md  SECURITY_CHECK_REPORT.md  SECURITY_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_GUIDE.md  SIDEBAR_FIXES.md  SPECIALIZED_AGENTS_DOCUMENTATION.md  SUPABASE_DEPLOYMENT_CHECKLIST.md  SYSTEM_TEST_SUMMARY.md  TOP_AGENT_PANEL.md  UX-UI-Enhancement-Summary.md  Vidalytics.db  (+53 more)
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
backend/: .dockerignore  .env.example  .env.railway  Dockerfile  Dockerfile.cloudrun  MODEL_INTEGRATION_GUIDE.md  Vidalytics.db  __init__.py  agent_adapters.py  agent_cache.py  agent_coordinators.py  agent_model_adapter.py  agent_models.py  agent_performance_models.py  agent_performance_tracker.py  agent_router.py  ai_services.py  alert_manager.py  analytics_router.py  analytics_service.py  api_models.py  api_startup.py  async_processing.py  audience_insights_agent.py  audience_insights_agent_v2.py  auth_middleware.py  automation_test_server.py  backup_router.py  backup_service.py  backups.py  base_agent.py  boss_agent.py  boss_agent_auth.py  boss_agent_auth_shim_impl.py  boss_agent_core.py  boss_agent_refactored.py  cache_service.py  circuit_breaker.py  cloudbuild.yaml  competitive_analysis_agent.py  (+91 more)
dashboard/: README.md  index.html  package.json
data/: vidalytics.db
docs/: API_DOCUMENTATION.md  API_ENDPOINTS.md  API_TESTING.md  AUDIENCE_INSIGHTS_AGENT.md  AUTHENTICATION_SETUP.md  BOSS_AGENT_SYSTEM.md  CI-CD.md  CLAUDE.md  CONTENT_ANALYSIS_AGENT.md  DOCKER.md  EMAIL_SERVICE_SETUP.md  FLOATING_CHAT_WINDOW.md  HIGH_PRIORITY_IMPLEMENTATION_GUIDE.md  MODEL_SWITCHING_GUIDE.md  OAUTH_IMPLEMENTATION.md  OAUTH_READY.md  QUICK_MODEL_REFERENCE.md  README.md  REDIS_SESSION_MANAGEMENT.md  SDK_DOCUMENTATION.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_GUIDE.md  SIZE_UPDATES.md  SPECIALIZED_AGENTS_DOCUMENTATION.md  STRATEGIC_CONTENT_ROUTING.md  SYSTEM_TEST_SUMMARY.md  SetupGuide.md  TOP_AGENT_PANEL.md  UX-UI-Enhancement-Summary.md  debug_frontend_issue.md  health-check-report.md  implementation_plan.md  openapi.json  (+1 more)
(+892 files in other folders)
